; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_dimension.c_ts_dimension_calculate_default_slice.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_dimension.c_ts_dimension_calculate_default_slice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ts_dimension_calculate_default_slice(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @IS_OPEN_DIMENSION(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32* @calculate_open_range_default(i32* %10, i32 %11)
  store i32* %12, i32** %3, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32* @calculate_closed_range_default(i32* %14, i32 %15)
  store i32* %16, i32** %3, align 8
  br label %17

17:                                               ; preds = %13, %9
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local i64 @IS_OPEN_DIMENSION(i32*) #1

declare dso_local i32* @calculate_open_range_default(i32*, i32) #1

declare dso_local i32* @calculate_closed_range_default(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
